# herdis-server

./: LICENSE  README.rst  bench-report  build-step  client-test.py  herdis.cabal
Database/HerdisServer/: Internal.hs  Main.hs  Protocol.hs  Server.hs  State.hs
